typescript/checker/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            212,
        ),
        hi: BytePos(
            216,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts:11:10
   |
11 | var t = C.bar();
   |          ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            262,
        ),
        hi: BytePos(
            263,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts:14:10
   |
14 | var r3 = t.bar();
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            285,
        ),
        hi: BytePos(
            286,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts:15:14
   |
15 | var r4 = new t(1);
   |              ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            538,
        ),
        hi: BytePos(
            542,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts:28:12
   |
28 | var t2 = C2.bar();
   |            ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            589,
        ),
        hi: BytePos(
            591,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts:31:10
   |
31 | var r6 = t2.bar();
   |          ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            613,
        ),
        hi: BytePos(
            615,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers.ts:32:14
   |
32 | var r7 = new t2('');
   |              ^^

